--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="The best social network for Teamfight Tactics content." />
+
+  <meta property="og:title" content="Common.gg" />
+  <meta property="og:description" content="The best social network for Teamfight Tactics content." />
+  <meta property="og:image" content="%PUBLIC_URL%/logo1light.png" />
+  <meta property="og:url" content="https://alpha.common.gg/" />
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
