final beta updates

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Common.gg" />
   <meta property="og:description" content="The best social network for Teamfight Tactics content." />
   <meta property="og:image" content="%PUBLIC_URL%/logo1light.png" />
-  <meta property="og:url" content="https://alpha.common.gg/" />
+  <meta property="og:url" content="https://common-gg.web.app/" />
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <!--
