--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <meta property="og:title" content="Common.gg" />
+  <meta property="og:title" content="common.gg" />
   <meta property="og:description" content="The best social network for Teamfight Tactics content." />
   <meta property="og:image" content="%PUBLIC_URL%/logo1light.png" />
   <meta property="og:url" content="https://common-gg.web.app/" />
@@ -25,11 +25,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Common</title>
+  <title>common</title>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>The best social network for Teamfight Tactics content.</noscript>
   <div id="root"></div>
   <!--
       This HTML file is a template.
